--- a/productes.html
+++ b/productes.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="estils.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Principal</title>
-  </head>
-  <body>
-    <nav class="barrasuperior"> 
-        
-    </nav>
-  </body>
-  
- </html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="global.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <title>siteName</title>
+</head>
+<body>
+    <div class="autocenterContainer titleContainer">
+        <h1 class="elm9"></h1>
+        <h2 class="elm11">Enjoy teamworking</h2>
+    </div>
+</body>
+</html>
