--- a/contacte.html
+++ b/contacte.html
@@ -11,7 +11,9 @@
     <div class="barrasuperior titulobarrasuperior">
         <h1 class="titulobarrasuperior"></h1>
         <h2 class="titulobarrasuperior">Punk Rave</h2>
-        <ul class="menu"> <ol>Inici</ol><ol>Producte</ol><ol>contacte</ol></ul>
+        <ul class="menu"> <ol><a href="index.html">Index</a>
+        </ol><ol><a href="productes.html">Productes</a> 
+        </ol><ol><a href="contacte.html">Contacte</a></ol></ul>
     </div>
 </body>
 </html>
