--- a/productes.html
+++ b/productes.html
@@ -8,9 +8,10 @@
     <title>siteName</title>
 </head>
 <body>
-    <div class="autocenterContainer titleContainer">
-        <h1 class="elm9"></h1>
-        <h2 class="elm11">Enjoy teamworking</h2>
+    <div class="barrasuperior titulobarrasuperior">
+        <h1 class="titulobarrasuperior"></h1>
+        <h2 class="titulobarrasuperior">Punk Rave</h2>
+        <ul class="menu"> <ol>Inici</ol><ol>Producte</ol><ol>contacte</ol></ul>
     </div>
 </body>
 </html>
