cambiando el color de enlace
intentando cambiar el color del enlace

--- a/contacte.html
+++ b/contacte.html
@@ -12,7 +12,7 @@
         <h1 class="titulobarrasuperior"></h1>
         <h2 class="titulobarrasuperior">Punk Rave</h2>
         <ul class="menu"> <ol><a href="index.html">Index</a>
-        </ol><ol><a href="productes.html">Productes</a> 
+        </ol><ol class="enlaceColor"><a href="productes.html">Productes</a> 
         </ol><ol><a href="contacte.html">Contacte</a></ol></ul>
     </div>
 </body>
