--- a/contacte.html
+++ b/contacte.html
@@ -8,12 +8,19 @@
     <title>siteName</title>
 </head>
 <body>
-    <div class="barrasuperior titulobarrasuperior">
-        <h1 class="titulobarrasuperior"></h1>
-        <h2 class="titulobarrasuperior">Punk Rave</h2>
-        <ul class="menu"> <ol><a href="index.html">Index</a>
-        </ol><ol class="enlaceColor"><a href="productes.html">Productes</a> 
-        </ol><ol><a href="contacte.html">Contacte</a></ol></ul>
-    </div>
+    <div class="barrasuperior">
+  <div class="logo-titulo">
+    <img src="imatges/angelic.png"  class="imagenLogo">
+    <h1 class="titulo">Angelic Pretty</h1>
+  </div>
+
+  <ul class="menu">
+    <li><a href="index.html">Index</a></li>
+    <li><a href="productes.html">Productes</a></li>
+    <li><a href="contacte.html">Contacte</a></li>
+  </ul>
+</div>
+
+
 </body>
 </html>
