haciendo el pie de página
fen el peu de página en el css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <title>siteName</title>
 </head>
 <body>
-    <div class="barrasuperior titulobarrasuperior">
-        <h1 class="titulobarrasuperior"></h1>
-        <h2 class="titulobarrasuperior">Punk Rave</h2>
-        <ul class="menu"> <ol>Inici</ol><ol>Producte</ol><ol>contacte</ol></ul>
+    <div class="barrasuperior">
+  <div class="logo-titulo">
+    <img src="imatges/angelic.png"  class="imagenLogo">
+    <h1 class="titulo">Angelic Pretty</h1>
+  </div>
+
+  <ul class="menu">
+    <li><a href="index.html">Index</a></li>
+    <li><a href="productes.html">Productes</a></li>
+    <li><a href="contacte.html">Contacte</a></li>
+  </ul>
+</div>
+<div class="PiedePagina">
+    <div class="PiedePagina">
+        <h1>dddd</h1>
     </div>
+</div>
+
 </body>
 </html>
