barra inferior acabada
acbada la barra inferior con redes y correo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 </div>
 <div class="PiedePagina">
     <div class="PiedePagina">
-        <h1>dddd</h1>
+        <h1 class="links">paris-web@angelicpretty.com</h1>
+        <ul class="links a">
+          <li><a href="https://www.instagram.com/angelicprettyparis"><img src="imatges/insta.png" class="insta"></a></li>
+          <li><a href="https://www.threads.com/@angelicprettyparis"><img src="imatges/x.png" class="twitter"></a></li>
+          <li><a href="https://www.tiktok.com/@angelicprettyparis"><img src="imatges/tik tok.png" class="tiktok"></a></li>
+        </ul>
     </div>
 </div>
 
