bloque de index central
bloque central botó cridaner hecho

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <div class="barrasuperior">
-  <div class="logo-titulo">
-    <img src="imatges/angelic.png"  class="imagenLogo">
-    <h1 class="titulo">Angelic Pretty</h1>
-  </div>
-
   <ul class="menu">
     <li><a href="index.html">Index</a></li>
     <li><a href="productes.html">Productes</a></li>
     <li><a href="contacte.html">Contacte</a></li>
   </ul>
+</div>
+<div class="contenidorCentral">
+  <div class="contenedor">
+    <img src="imatges/angelic pretty logo chulo.png" class="imagenLogo" alt="">
+  <h1 class="logo-titulo">Angelic Pretty Paris</h1>
+</div>
+  
+
+  
 </div>
 <div class="PiedePagina">
     <div class="PiedePagina">
