--- a/index.html
+++ b/index.html
@@ -21,6 +21,39 @@
   <h1 class="logo-titulo">Angelic Pretty Paris</h1>
 </div>
 
+<section class="colleccions">
+  
+  <div class="carta">
+    <h3>Designed in Japan</h3>
+    <p>Angelic Pretty is a Japanese lolita fashion brand</p>
+    <span class="etiqueta"> Japan</span>
+     <span class="etiqueta">Japanese quality</span>
+     <img src="imatges/angelic vetsido 1.jpg" class="imagen_etiqueta">
+  </div>
+
+
+
+  <div class="carta">
+    <h3>Official Store</h3>
+    <p>Angelic Pretty Paris is the flagship store of the brand in Europe.</p>
+    <span class="etiqueta"> Paris</span>
+     <span class="etiqueta">Offical angelic pretty store</span>
+     <img src="imatges/vestido lolita 3.png" class="imagen_etiqueta">
+  </div>
+
+
+
+  <div class="carta">
+    <h3>Tracked Delivery</h3>
+    <p>Discover here the clothing and accessories of sweet lolita as in Tokyo.
+      We will ship to all over the world our kawaii items.</p>
+    <span class="etiqueta"> Tokyo</span>
+     <span class="etiqueta">Kawaii</span>
+     <span class="etiqueta">Lolita</span>
+     <img src="imatges/vestido lolita 2.jpg" class="imagen_etiqueta">
+  </div>
+</section>
+
   
 
   
