--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
   </div>
 </section>
 
+<div class="barra-informativa">
+  <span> 48h Shipping</span>
+  <img src="imatges/angelic.png" class="separador">
+  <span>Free Exchanges </span>
+  <img src="imatges/angelic.png" class="separador">
+  <span>Secure Payment</span>
+</div>
+
   
 
   
