--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
 
 <div class="barra-informativa">
   <span> 48h Shipping</span>
-  <img src="imatges/angelic.png" class="separador">
+  <img src="imatges/lazo.png" class="separador">
   <span>Free Exchanges </span>
-  <img src="imatges/angelic.png" class="separador">
+  <img src="imatges/lazo.png" class="separador">
   <span>Secure Payment</span>
+</div>
+
+<div class="separador_blanco">
+  
+  
+
 </div>
 
   
