--- a/productes.html
+++ b/productes.html
@@ -9,16 +9,70 @@
 </head>
 <body>
     <div class="barrasuperior">
-  <div class="logo-titulo">
-    <img src="imatges/angelic.png"  class="imagenLogo">
-    <h1 class="titulo">Angelic Pretty</h1>
-  </div>
-
   <ul class="menu">
     <li><a href="index.html">Index</a></li>
     <li><a href="productes.html">Productes</a></li>
     <li><a href="contacte.html">Contacte</a></li>
   </ul>
+</div>
+
+<div class="separador_blanco">
+</div>
+
+<div class="filtres">
+  <span>New Collection</span>
+  <img src="imatges/estrellas.png" class="separador_filtres">
+  <span>Original Prints Series</span>
+  <img src="imatges/estrellas.png" class="separador_filtres">
+  <span>Clothes</span>
+  <img src="imatges/estrellas.png" class="separador_filtres">
+  <span>Accessories</span>
+</div>
+
+<div class="grid">
+  <div class="tarjeta">
+    <img src="imatges/vestido gradne.jpg" class="productes">
+    <h3>Dreamy Tiny Bear OnePiece</h3>
+    <p>439,00€ tax. incl.</p>
+  </div>
+
+  <div class="tarjeta">
+    <img src="imatges/vestido grande2.jpg" class="productes">
+    <h3>Fluffy Ribbon Doll Skirt</h3>
+    <p>360,00€ tax. incl.</p>
+  </div>
+  
+  <div class="tarjeta">
+    <img src="imatges/vestido grande3.jpg" class="productes">
+    <h3>Romantic Symphony Jumperskirt</h3>
+    <p>398,00€ tax. incl.</p>
+  </div>
+
+  <div class="tarjeta">
+    <img src="imatges/vestidogrande 4.jpg" class="productes">
+    <h3>Dreamy Balloon Onepiece</h3>
+    <p>385,00€ tax. incl.</p>
+  </div>
+
+  <div class="tarjeta">
+    <img src="imatges/vestido grande 5.jpg" class="productes">
+    <h3>Dreamy Tiny Bear OnePiece</h3>
+    <p>439,00€ tax. incl.</p>
+  </div>
+
+  <div class="tarjeta">
+    <img src="imatges/vestido grande 6.jpg" class="productes">
+    <h3>Fairy Marine Jumperskirt</h3>
+    <p>340,00€ tax. incl.</p>
+  </div>
+
+</div>
+
+
+
+
+
+
 </div>
 <div class="PiedePagina">
     <div class="PiedePagina">
