pagína de contacto formulario
página de constacto formulatio hecho

--- a/contacte.html
+++ b/contacte.html
@@ -9,16 +9,40 @@
 </head>
 <body>
     <div class="barrasuperior">
-  <div class="logo-titulo">
-    <img src="imatges/angelic.png"  class="imagenLogo">
-    <h1 class="titulo">Angelic Pretty</h1>
-  </div>
-
   <ul class="menu">
     <li><a href="index.html">Index</a></li>
     <li><a href="productes.html">Productes</a></li>
     <li><a href="contacte.html">Contacte</a></li>
   </ul>
+</div>
+<div class="contenidorCentral">
+  <div class="contenedor">
+    <img src="imatges/angelic pretty logo chulo.png" class="imagenLogo" alt="">
+  <h1 class="logo-titulo">Angelic Pretty Paris</h1>
+</div>
+<div class="separador_blanco">
+  <h1></h1>
+</div>
+<div class="contenedor_contacto">
+  <div class="grid_contacto">
+      <span class="tarjetas_contacto"> Name</span>
+      <span class="tarjetas_contacto"> Email</span>
+      <span class="mensaje"> Messaje</span>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="separador_blanco">
+  <h1></h1>
+</div>
+
+  
+
+  
 </div>
 <div class="PiedePagina">
     <div class="PiedePagina">
@@ -30,6 +54,9 @@
         </ul>
     </div>
 </div>
+
+</body>
+</html>
 
 </body>
 </html>
