--- a/contacte.html
+++ b/contacte.html
@@ -25,9 +25,23 @@
 </div>
 <div class="contenedor_contacto">
   <div class="grid_contacto">
+    <h2>
+      Contact us
+    </h2>
       <span class="tarjetas_contacto"> Name</span>
       <span class="tarjetas_contacto"> Email</span>
       <span class="mensaje"> Messaje</span>
+    </div>
+    <div class="grid_contacto">
+      <h2>Direcction</h2>
+      <p>3 Rue Saint-Roch, 75001 Paris, Francia</p>
+      <h2> schedule </h2>
+      <p> Martes a sábado, de 13:00 a 19:00 </p>
+      <h2>Ubicación</h2>
+      <img src="imatges/mapa.png" class="mapa">
+    </div>
+    
+      
     </div>
   </div>
 </div>
