--- a/contacte.html
+++ b/contacte.html
@@ -29,6 +29,7 @@
       <span class="tarjetas_contacto"> Name</span>
       <span class="tarjetas_contacto"> Email</span>
       <span class="mensaje"> Messaje</span>
+      <img src="imatges/angelic.png" class="angelic">
     </div>
     <div class="grid_contacto">
       <h2>Direcction</h2>
